<resources>
    <string name="app_name">Diabeticlog</string>

    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="action_settings">Settings</string>

    <string name="seleccione_tipo_ingesta">Seleccione el tipo de ingesta</string>
    <string name="Desayuno">Desayuno</string>
    <string name="Media_manana">Media mañana</string>
    <string name="Comida">Comida</string>
    <string name="Merienda">Merienda</string>
    <string name="Cena">Cena</string>
    <string name="Extra">Extra</string>

    <string name="Lenta">Lenta</string>
    <string name="Rapida">Rápida</string>
    <string name="Intermedia">Intermedia</string>

    <string name="Normal">Normal</string>

    <string name="Alta">Alta</string>
    <string name="Media">Media</string>
    <string name="Baja">Baja</string>

    <string name="Correr">Correr</string>
    <string name="Caminar">Caminar</string>
    <string name="Nadar">Nadar</string>
    <string name="Futbol">Futbol</string>
    <string name="Baloncesto">Baloncesto</string>
    <string name="Gimnsasio">Gimnsasio</string>
    <string name="Hockey">Hockey</string>
    <string name="Tenis">Tenis</string>
    <string name="Padel">Pádel</string>
    <string name="Pingpong">Ping pong</string>
    <string name="Otra">Otra</string>

    <string name="menu_insulina">Insulina</string>
    <string name="menu_registroactividadfisicamanual">Actividad Fisica (Manual)</string>
    <string name="menu_alimentacion">Alimentación</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_registroactividadfisicaautomatica">Actividad Física (Auto)</string>
    <string name="menu_glucosa">Glucosa</string>
    <string name="menu_pantalla_inicio">Inicio</string>

    <string name="menu_add_insulina">Registrar insulina</string>
    <string name="menu_add_registroactividadfisicamanual">Registrar actividad física</string>
    <string name="menu_add_alimentacion">Registrar ingesta</string>
    <string name="menu_add_glucosa">Registrar glucosa</string>

    <string name="menu_edit_insulina">Modificar insulina</string>
    <string name="menu_edit_registroactividadfisicamanual">Modificar actividad física</string>
    <string name="menu_edit_alimentacion">Modificar ingesta</string>
    <string name="menu_edit_glucosa">Modificar glucosa</string>

    <string name="Acceder">Acceder</string>
    <string name="Registrarme">Registrarme</string>

    <string name="NombreDeUsuario">Nombre de usuario</string>
    <string name="Usuario">Usuario</string>

    <string name="TipoInsulina">Tipo de insulina</string>
    <string name="TipoAplicacion">Tipo de aplicación</string>
    <string name="NumeroUnidades">Número de unidades</string>
    <string name="UnidadesAplicadas">Unidades aplicadas</string>
    <string name="HoraAplicacion">Hora de aplicación</string>

    <string name="HoraMedicion">Hora de medición</string>
    <string name="GlucosamgdL">Glucosa (mg/dL)</string>

    <string name="TipoIngesta">Tipo de ingesta</string>
    <string name="RacionesHidratos">Raciones de hidratos consumidas</string>
    <string name="HoraIngesta">Hora de la ingesta</string>

    <string name="TipoActividad">Tipo de actividad</string>
    <string name="Intensidad">Intensidad</string>
    <string name="KcalQuemadas">Kcal quemadas</string>
    <string name="HoraInicio">Hora de inicio</string>
    <string name="HoraFin">Hora de final</string>

    <string name="Add">Añadir</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Modificar">Modificar</string>
    <string name="Eliminar">Eliminar</string>

    <string name="GuardarCambios">Guardar cambios</string>
    <string name="Pesokg">Peso (kg)</string>
    <string name="Alturacm">Altura (cm)</string>

    <string name="NoDatos">No se han registrado datos hoy</string>

    <string name="raciones">raciones</string>

    <string name="ErrorDataIngesta">Error, debe introducir todos los datos de la ingesta.</string>

    <string name="ErrorDataRegistro">Error, debe introducir todos los datos del registro de actividad física.</string>

    <string name="ErrorDataGlucosa">Error, debe introducir todos los datos de la medición de glucosa.</string>

    <string name="ErrorHorasRegistro">Error, la hora de inicio debe ser anterior a la hora de fin.</string>

    <string name="ErrorDesayunoRegistered">Error, ya se ha registrado el desayuno.</string>
    <string name="ErrorMediaMananaRegistered">Error, ya se ha registrado la ingesta de media mañana.</string>
    <string name="ErrorComidaRegistered">Error, ya se ha registrado la comida.</string>
    <string name="ErrorMeriendaRegistered">Error, ya se ha registrado la merienda.</string>
    <string name="ErrorCenaRegistered">Error, ya se ha registrado la cena.</string>

    <string name="RegistradaIngesta">Ingesta registrada:</string>

    <string name="EliminadaIngesta">Ingesta eliminada:</string>

    <string name="IngestaYaRegistrada">Ya has registrado la ingesta:</string>

    <string name="importante">¡Importante!</string>

    <string name="registratudesayuno">¡Registra tu desayuno!</string>
    <string name="olvidadodesayuno">Parece, que se te ha olvidado registrar tu desayuno, ¡hazlo cuanto antes!</string>

    <string name="registratumediamanana">¡Registra tu pincho de media mañana!</string>
    <string name="olvidadomediamanana">Parece, que se te ha olvidado registrar tu pincho de media mañana, ¡hazlo cuanto antes!</string>

    <string name="registratucomida">¡Registra tu comida!</string>
    <string name="olvidadocomida">Parece, que se te ha olvidado registrar tu comida, ¡hazlo cuanto antes!</string>

    <string name="registratumerienda">¡Registra tu merienda!</string>
    <string name="olvidadomerienda">Parece, que se te ha olvidado registrar tu merienda, ¡hazlo cuanto antes!</string>

    <string name="registratucena">¡Registra tu cena!</string>
    <string name="olvidadocena">Parece, que se te ha olvidado registrar tu cena, ¡hazlo cuanto antes!</string>

    <string name="Registrada">Registrada</string>
    <string name="Eliminada">Eliminada</string>

    <string name="MedicionGlucosaCreada">Medicion de glucosa creada</string>

    <string name="ErrorDataInsulina">Error, debe introducir todos los datos de la aplicación de insulina.</string>

    <string name="unidadesdeinsulina">unidades de insulina</string>

    <string name="tipo">Tipo</string>

    <string name="aplicacion">Aplicacion</string>

    <string name="registradaaplicacion">Registrada aplicacion</string>
    <string name="tipoinsulina">Tipo de insulina</string>
    <string name="numerounidades">Numero de unidades</string>

    <string name="EliminadaAplicacion">Eliminada aplicacion</string>


    <string name="registrainsulinalenta">¡No has registrado tus aplicaciones de insulina lenta!</string>
    <string name="olvidadoinsulinalenta">Parece, que se te ha olvidado registrar tus aplicaciones de insulina lenta, ¡hazlo cuanto antes!</string>

    <string name="registrainsulinarapidadesayuno">¡No has registrado tu insulina rápida previa al desayuno!</string>
    <string name="olvidadoinsulinarapidadesayuno">Parece, que se te ha olvidado registrar tus aplicaciones de insulina rapida antes del desayuno, ¡hazlo cuanto antes!</string>

    <string name="registrainsulinarapidacomida">¡No has registrado tu insulina rápida previa a la comida!</string>
    <string name="olvidadoinsulinarapidacomida">"Parece, que se te ha olvidado registrar tus aplicaciones de insulina rapida antes de la comida, ¡hazlo cuanto antes!</string>

    <string name="registrainsulinarapidacena">¡No has registrado tu insulina rápida previa a la cena!</string>
    <string name="olvidadoinsulinarapidacena">"Parece, que se te ha olvidado registrar tus aplicaciones de insulina rapida antes de la cena, ¡hazlo cuanto antes!</string>


    <string name="ActividadFisica">Actividad física</string>
    <string name="Ingesta">Ingesta</string>

    <string name="GlucosaEstable">Glucosa (niveles estables)</string>
    <string name="GlucosaPeligroso">Glucosa (niveles peligrosos)</string>

    <string name="GlucosaEnSangre">Glucosa en sangre</string>
    <string name="AplicacionesInsulina">Aplicaciones de insulina</string>
    <string name="ingestas">Ingestas</string>

    <string name="PinIncorrecto">Error, pin incorrecto</string>

    <string name="DatosGuardados">Cambios guardados con exito</string>
    <string name="ProblemaGuardadoDatos">Error, por favor introduzca todos los datos</string>


    <string name="IntroduzcaDatosSignUp">Por favor, introduce un nombre de usuario y un pin para iniciar sesión en el futuro</string>
    <string name="DistanciaRecorrida">Distancia recorrida</string>
    <string name="pasos">pasos</string>
    <string name="kcals">kcals</string>
    <string name="NombreIngestaReservado">Nombre de ingesta reservado, por favor introduzca otro nombre.</string>
    <string name="ModificadaIngesta">Ingesta modificada:</string>


</resources>