<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@android:drawable/dialog_holo_light_frame">

    <TextView
        android:id="@+id/hora_final_actividad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline80"
        app:layout_constraintTop_toTopOf="@+id/guideline71"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/etiqueta8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        android:text="@string/HoraFin"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline72"
        app:layout_constraintEnd_toStartOf="@+id/guideline79"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline71"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/etiqueta7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        android:text="@string/HoraInicio"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline79"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline69"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/kcal_quemadas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline68"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline80"
        app:layout_constraintTop_toTopOf="@+id/guideline67"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/etiqueta4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        android:text="@string/Intensidad"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline79"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline65"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_eliminar_registro"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/Eliminar"
        app:backgroundTint="@color/azul_fondo"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline76"
        app:layout_constraintTop_toTopOf="@+id/guideline77"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_modificar_registro"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/Modificar"
        app:backgroundTint="@color/azul_fondo"
        app:layout_constraintBottom_toTopOf="@+id/guideline78"
        app:layout_constraintEnd_toStartOf="@+id/guideline75"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline77"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/intensidad_actividad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline66"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline80"
        app:layout_constraintTop_toTopOf="@+id/guideline65"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/hora_inicio_actividad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline70"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline80"
        app:layout_constraintTop_toTopOf="@+id/guideline69"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/etiqueta5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        android:text="@string/KcalQuemadas"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline68"
        app:layout_constraintEnd_toStartOf="@+id/guideline79"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline67"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tipo_actividad"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right|center_vertical"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline74"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline80"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        app:layout_constraintVertical_bias="0.333" />


    <TextView
        android:id="@+id/etiqueta6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left|center_vertical"
        android:text="@string/TipoActividad"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline64"
        app:layout_constraintEnd_toStartOf="@+id/guideline79"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline73"
        app:layout_constraintTop_toTopOf="@+id/guideline63"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline67"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline73"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.48" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />


</androidx.constraintlayout.widget.ConstraintLayout>